--- a/index.html
+++ b/index.html
@@ -374,11 +374,15 @@ individuales.</p>
 marketing con la finalidad de convertir a los usuarios casuales en
 miembros anuales.</p>
 <p>Para lograr eso, primeramente el equipo necesita tener un mejor
-entendimiento sobre: - ¿Cómo los miembros anuales difieren de los
-usuarios casuales en la manera de usar Cyclistic? - ¿Por qué los
-usuarios casuales querrían adquirir la membresía anual de Cyclistic? -
-¿Como puede Cyclistic utilizar los medios digitales para influenciar a
-los usuarios casuales a volverse miembros?</p>
+entendimiento sobre:</p>
+<ul>
+<li>¿Cómo los miembros anuales difieren de los usuarios casuales en la
+manera de usar Cyclistic?</li>
+<li>¿Por qué los usuarios casuales querrían adquirir la membresía anual
+de Cyclistic?</li>
+<li>¿Como puede Cyclistic utilizar los medios digitales para influenciar
+a los usuarios casuales a volverse miembros?</li>
+</ul>
 </div>
 <div id="fuentes-de-datos" class="section level3">
 <h3>2. Fuentes de datos</h3>
@@ -433,8 +437,8 @@ las métricas de duración y distribución.</p>
 </div>
 <div id="análisis" class="section level3">
 <h3>4. Análisis</h3>
-<div id="análisis-general-por-tipo-de-usuario" class="section level6">
-<h6>Análisis general por tipo de usuario</h6>
+<div id="análisis-general-por-tipo-de-usuario" class="section level5">
+<h5>Análisis general por tipo de usuario</h5>
 <p>En primer lugar, se analizan métricas generales para comparar el
 comportamiento de los miembros anuales y los usuarios casuales.</p>
 <pre class="r"><code>all_trips %&gt;% 
@@ -452,11 +456,15 @@ comportamiento de los miembros anuales y los usuarios casuales.</p>
 ## 2 member             716406                688.                510
 ## # ℹ 1 more variable: tiempo_total_viajado &lt;dbl&gt;</code></pre>
 <p>A partir de estos datos se observan grandes diferencias entre ambos
-tipos de usuarios: • Los <em>miembros anuales</em> realizan una cantidad
-significativamente mayor de viajes. • Los <em>usuarios casuales</em>, en
-cambio, presentan una duración promedio y mediana más alta. • El tiempo
-total viajado es considerablemente mayor en los miembros, debido a la
-frecuencia de uso.</p>
+tipos de usuarios:</p>
+<ul>
+<li>Los <em>miembros anuales</em> realizan una cantidad
+significativamente mayor de viajes.</li>
+<li>Los <em>usuarios casuales</em>, en cambio, presentan una duración
+promedio y mediana más alta.</li>
+<li>El tiempo total viajado es considerablemente mayor en los miembros,
+debido a la frecuencia de uso.</li>
+</ul>
 <hr />
 </div>
 <div id="análisis-de-la-distribución-del-80-de-la-duración-de-los-viajes" class="section level5">
