--- a/index.html
+++ b/index.html
@@ -494,8 +494,8 @@ duracion_80</code></pre>
 ##   &lt;chr&gt;                  &lt;dbl&gt;
 ## 1 casual                  38.6
 ## 2 member                  15.5</code></pre>
-<p>Los resultados muestran que: • El 80% de los viajes de los
-<em>miembros anuales</em> tiene una duración de hasta ~15 minutos. • El
+<p>Los resultados muestran que: - El 80% de los viajes de los
+<em>miembros anuales</em> tiene una duración de hasta ~15 minutos. - El
 80% de los viajes de los <em>usuarios casuales</em> tiene una duración
 de hasta ~38 minutos.</p>
 <p>Esto indica que los <em>miembros</em> tienden a realizar trayectos
